[package]
name = "fetch_token_users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.200", features = ["derive"] }
solana-account-decoder = "1.18.12"
solana-client = "1.18.12"
solana-sdk = "1.18.12"
spl-token = "4.0.0"
